# data_analysis_training_with_kaggle_data

./: .gitignore  pyproject.toml  save_data.py
