[tool.poetry]
name = "disaster-dataset"
version = "0.1.0"
description = ""
authors = ["Tomasz Majcher <tom.majcher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "3.10.0"
plotly = "6.0.0"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
